AC_INIT

PACKAGE=nautilus-locked-folder
VERSION=1.0.1


AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_CONFIG_HEADER(config.h)

NAUTILUS_REQUIRED=2.5.0
EEL_REQUIRED=2.5.0
GLIB_REQUIRED=2.4.0
OPENSSL_REQUIRED=0.9.7
LIBGLADE_REQUIRED=2.5
LIBGNOMEUI_REQUIRED=2.10

AC_PROG_CC
AM_PROG_LIBTOOL

GNOME_COMPILE_WARNINGS(maximum)

dnl Check for pkgconfig first
AC_CHECK_PROG(HAVE_PKGCONFIG, pkg-config, yes, no)

dnl Give error and exit if we don't have pkgconfig
if test "x$HAVE_PKGCONFIG" = "xno"; then
  AC_MSG_ERROR(you need to have pkgconfig installed !)
fi

PKG_CHECK_MODULES(NAUTILUS, libnautilus-extension >= $NAUTILUS_REQUIRED eel-2.0 >= $EEL_REQUIRED glib-2.0 >= $GLIB_REQUIRED openssl >= $OPENSSL_REQUIRED libglade-2.0 >= $LIBGLADE_REQUIRED libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED)

dnl make GNOME_CFLAGS and GNOME_LIBS available
AC_SUBST(NAUTILUS_CFLAGS)
AC_SUBST(NAUTILUS_LIBS)

dnl intltool stuff
AC_PROG_INTLTOOL(0.18)
dnl AM_WITH_NLS
GETTEXT_PACKAGE=nautilus-locked-folder
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [gettext package])
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
  Makefile 
  src/Makefile
  po/Makefile.in 
])

